# Sharing_ISL_python

./: .gitignore  Chapter_10_sec_10.9.ipynb  Chapter_11_sec_11.8.ipynb  Chapter_12_sec_12.5.ipynb  Chapter_13_sec_13.6.ipynb  Chapter_2_sec_231.ipynb  Chapter_2_sec_3.1_3.3.ipynb  Chapter_2_sec_3.1_3.4.ipynb  Chapter_2_sec_3.1_3.5.ipynb  Chapter_3_sec_6.1_6.2.ipynb  Chapter_3_sec_6.1_6.3.ipynb  Chapter_3_sec_6.1_6.5.ipynb  Chapter_3_sec_6.1_6.7.ipynb  Chapter_4_sec_6.1.ipynb  Chapter_4_sec_6.1_6.3.ipynb  Chapter_4_sec_6.1_6.6.ipynb  Chapter_4_sec_7.1_7.7.ipynb  Chapter_5_sec_3.1_3.4.ipynb  Chapter_6_sec_6.5.ipynb  Chapter_6_sec_6.5_6.6.ipynb  Chapter_6_sec_6.5_6.7.ipynb  Chapter_7_sec_7.8.ipynb  Chapter_8_sec_8.3.ipynb  Chapter_9_sec_9.6.ipynb  Makefile  README.md  Thumbs.db  pyproject.toml
data/: .Rhistory  Bikeshare.csv  Boston.csv  BrainCancer.csv  Caravan.csv  Carseats.csv  Default.csv  Fund.csv  Khan.json  Khan.rda  NCI60.rda  NCI60_data.csv  NCI60_labs.csv  OJ.csv  Portfolio.csv  Publication.csv  Readme_datalist  datalist
