[tool.poetry]
name = "elastic"
version = "0.1.0"
description = "Experiments wiht Elasticsearch"
authors = ["@ecoonline.com"]

[tool.poetry.dependencies]
python = "3.8.12"
elasticsearch = "^7.15.2"
jupyterlab = "^3.2.4"
watermark = "^2.2.0"
nb-black = "^1.0.7"
pandas = "^1.3.4"
rich = "^10.15.1"
black = "^21.11b1"
python-dotenv = "^0.19.2"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
statsmodels = "^0.13.1"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
tensorflow = "^2.7.0"
keras = "^2.7.0"
lifelines = "^0.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
