[tool.poetry]
name = "islp"
version = "0.1.0"
description = "An Introduction to Statistical Learning with Applications in PYTHON"
authors = ["qx0731@gmail.com"]

[tool.poetry.dependencies]
python = "3.8.12"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
statsmodels = "^0.13.1"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
tensorflow = "^2.7.0"
keras = "^2.7.0"
lifelines = "^0.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
